# codegen

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .windsurfrules  =3.4.0  CHANGES.md  CLA.md  CODEBASE_IMPROVEMENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-runner  MODAL_SETUP.md  QUICK_START_LOGGING.md  README.md  TYPESCRIPT_MIGRATION.md  Untitled.ipynb  app.py  codegen_app_app.py  demo.py  fix-tscodeblock-attribute.patch  fix_checkout_branch.py  hatch.toml  jest.config.js  modal_app.py  mypy_strict.ini  next.js.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  scratchpad.md  start.py  test.py  tsconfig.json  ty.toml  type_check_test.py  vercel.json
.biomejs/: ignore
.claude/: settings.local.json
.codegen/codemods/no_link_backticks/: no_link_backticks.py
.codegen/codemods/test_codemod/: test_codemod.py
.codegen/codemods/update_loggers/: update_loggers.py
.github/: codecov.yml
.github/actions/report/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: auto-release.yml  generate-docs.yml  mypy.yml  pre-commit.yml  release.yml  test.yml  ty.yml  unit-tests.yml  vercel-pr-deployment.yml
agentgen/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
agentgen/agentgen/: __init__.py
agentgen/agentgen/agents/: code_agent.py  (+1 more)
agentgen/agents/: chat_agent.py
agentgen/applications/: README.md
agentgen/applications/pr_review_agent/: .env.example  README.md  app.py  launch.py  ngrock.py  ngrok_manager.py  pyproject.toml  scratchpad.md  webhook_manager.py
agentgen/backend/: api.py
agentgen/frontend/: package-lock.json  tailwind.config.ts
agentgen/pr_review_bot/: .env.example  README.md  app.py  codebase.py  helpers.py  launch.py  ngrok_manager.py  pyproject.toml  requirements.txt  run.py  scratchpad.md  webhook_manager.py
architecture/2. parsing/: C. Directory Parsing.md
architecture/3. imports-exports/: A. Imports.md  B. Exports.md  C. TSConfig.md
architecture/5. performing-edits/: A. Transactions.md  B. Transaction Manager.md
codegen/: __init__.py  compat.py  exports.py
codegen-examples/: pyproject.toml
codegen-examples/examples/swebench_agent_run/: .env.db.template  .env.template  README.md  agent_cli.py  deploy.sh  entry_point.py  eval_cli.py  eval_run.py  local_evaluation.ipynb  local_run.ipynb  pyproject.toml  run_eval.py
codegen-examples/examples/swebench_agent_run/swebench_agent_run/: metrics.py  report.py  utils.py
codegen-examples/examples/swebench_agent_run/swebench_agent_run/modal_harness/: __init__.py  entry_point.py  sandbox.py
codegen-on-oss/: .dockerignore  Dockerfile  Makefile  README.md  codegen_modal_deploy.py  codegen_modal_run.py  docker-compose.yaml  input.csv  modal_run.py  pyproject.toml
codegen-on-oss/codegen_on_oss/: bucket_store.py  cache.py  cli.py  errors.py  metrics.py  parser.py
codegen-on-oss/scripts/: create_db.py  db
codegen-vscode-extension/: README.md  package.json  tsconfig.json  webpack.config.js
codegen-vscode-extension/media/: main.css  main.js
codegen-vscode-extension/src/: commands.ts  extension.ts  utils.ts
codegen/sdk/: __init__.py  utils.py
config/: pyproject.toml  ruff.toml
docs/: INTEGRATION_README.md  QUICK_START_LOGGING.md  VERCEL_DEPLOYMENT.md  conftest.py  docs.json  mint.json
docs/api-reference/: agent-run-logs.mdx  available-tools.md  openapi3.json  overview.mdx
docs/architecture/: context-inheritance.mdx  scope-keys.mdx
docs/blog/: devin.mdx  grainchain-langchain-for-sandboxes.mdx  posts.mdx
docs/building-with-codegen/: dot-codegen.mdx  parsing-codebases.mdx  reusable-codemods.mdx
docs/capabilities/: analytics.mdx  capabilities.mdx  checks-autofixer.mdx  claude-code.mdx  interrupts.mdx  pr-review.mdx  wake-up.mdx
docs/cli/: create.mdx
docs/deployment/: codegen-app.mdx  github.mdx  linear.mdx  overview.mdx  slack.mdx
docs/feature-requests/: linear-project-description.mdx
docs/fixes/: system-prompt-typo.md
docs/graph-sitter/: installation.mdx
docs/images/: clickup.png.placeholder
docs/integrations/: circleci.mdx  clickup.mdx  figma.mdx  github.mdx  integrations.mdx  jira.mdx  linear.mdx  mcp-servers.mdx  mcp.mdx  monday.mdx  notion.mdx  postgres.mdx  repository-configuration.mdx  sandboxes.mdx  sentry.mdx  slack.mdx  web-search.mdx
docs/introduction/: about.mdx  advanced-settings.mdx  api.mdx  capabilities.mdx  cli.mdx  community.mdx  faq.mdx  overview.mdx  prompting.mdx  sdk.mdx  tools.mdx  use-cases.mdx  work-with-ai.mdx
docs/sandboxes/: base-image.mdx  docker-hub.mdx  editor.mdx  environment-variables.mdx  overview.mdx  sandbox-size.mdx  security-scanning.mdx  setup-commands.mdx  web-preview.mdx
docs/settings/: agent-behavior.mdx  agent-permissions.mdx  claude-code.mdx  model-configuration.mdx  on-prem-deployment.mdx  organization-rules.mdx  repo-rules.mdx  repo-rules.tsx  rules-overview.mdx  secrets.mdx  settings.mdx  team-roles.mdx  trufflehog-integration.mdx
docs/tutorials/: build-code-agent.mdx  promise-to-async-await.mdx
examples/: sdk_usage.py
examples/meeting_bot/: README.md  recall_ai_poc.py  zoom_sdk_poc.js
n8n-node/: LICENSE  README.md  gulpfile.js  index.js  package.json  tsconfig.json
n8n-node/credentials/: CodegenApi.credentials.ts
scripts/: analyze_presenters.py  setup.sh
scripts/codemods/: README.md  remove_empty_presenter_params.py
scripts/standalone/: README.md  remove_empty_presenter_params.py
src/: autogenlib_context.py  cli.ts  graph_sitter_analysis.py  graph_sitter_backend.py  index.ts  lsp_diagnostics.py
src/codegen/: __init__.py  __main__.py  exceptions.py  exports.py  sdk.py
src/codegen_api_client/: __init__.py  exceptions.py
src/graph-sitter/: enums.py
test/: test_pr_example.md
tests/: CONSOLIDATION_REPORT.md  conftest.py
tests/integration/: test_tfidf_index.py  test_vector_index.py
tests/legacy_tests/: build_hooks.py
tests/shared/: test_markdown_adf_adapter.py
tools/: autogenlib_ai_resolve.py  graph_sitter_backend.py
tools/codegen_api_client/: api_client.py  configuration.py  rest.py
(+1045 files in other folders)
