[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "codegen"
dynamic = ["version"]
description = "Codegen CLI - Transform your code with AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "codegen-api-client",
  "typer>=0.16.0",
  "rich>=13.7.1",
  "hatch-vcs>=0.4.0",
  "hatchling>=1.25.0",
  # CLI and git functionality dependencies
  "requests>=2.32.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.0.0",
  "PyGithub==2.6.1",
  "GitPython==3.1.44",
  "packaging>=24.2",
  "python-dotenv>=1.0.1",
  "giturlparse",
  "codeowners>=0.6.0",
  "unidiff>=0.7.5",
  "datamodel-code-generator>=0.26.5",
  "fastmcp>=2.9.0",
  # Utility dependencies
  "colorlog>=6.9.0",
  "psutil>=5.8.0",
  "sentry-sdk==2.29.1",
  "humanize>=4.10.0",
]

# renovate: datasource=python-version depName=python
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 4 - Beta",

  "Environment :: Console",
  "Environment :: MacOS X",

  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",

  "License :: OSI Approved",
  "License :: OSI Approved :: Apache Software License",

  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://docs.codegen.com"
Issues = "https://github.com/codegen-sh/codegen/issues"
Source = "https://github.com/codegen-sh/codegen"

[project.scripts]
codegen = "codegen.cli.cli:main"

[project.optional-dependencies]
types = []
[tool.uv]
cache-keys = [{ git = { commit = true, tags = true } }]
dev-dependencies = [
  "coverage<8.0.0,>=7.6.1",
  "filelock<4.0.0,>=3.15.4",
  "pytest>=8.3.3",
  "pytest-cov>=6.1.0,<6.1.1",
  "ruff>=0.6.8",
  "ty>=0.0.1a10",
  "pre-commit>=4.0.1",
  "pytest-xdist>=3.6.1,<4.0.0",
  "pytest-mock<4.0.0,>=3.14.0",
  "pytest-timeout>=2.3.1",
  "ruff-lsp<1.0.0,>=0.0.55",
  "austin-python>=1.7.1",
  "autoflake>=2.3.1",
  "typer>=0.16.0",
  "pre-commit-uv>=4.1.4",
  "austin-dist>=3.7.0",
  "uv>=0.4.25",
  "deptry>=0.22.0",
  "sybil[pytest]>=9.0.0",
  "jsbeautifier<2.0.0,>=1.15.1",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "calver-by-date" }

[tool.hatch.build.targets.wheel]
packages = ["src/codegen"]

[tool.hatch.build.hooks.vcs]
version-file = "src/codegen/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["codegen"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["codegen", "tests"]
branch = true
parallel = true
omit = [
  "src/codegen/__about__.py",
]

[tool.coverage.paths]
codegen = ["src/codegen", "*/codegen/src/codegen"]
tests = ["tests", "*/codegen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
]

