[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "codegen"
dynamic = ["version"]
description = "Codegen CLI - Transform your code with AI."
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "codegen-api-client",
  "typer>=0.16.0",
  "rich>=13.7.1",
  "hatch-vcs>=0.4.0",
  "hatchling>=1.25.0",
  "humanize>=4.10.0",
  "packaging>=24.2",
  "psutil>=5.8.0",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "typing-extensions>=4.12.2",
  "urllib3>=2.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "pytest-sugar>=1.0.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.3.1",
  "pytest-rerunfailures>=14.0",
  "pytest-randomly>=3.15.0",
  "pytest-freezegun>=0.4.2",
  "pytest-httpserver>=1.0.10",
  "pytest-html>=4.1.1",
  "pytest-metadata>=3.1.1",
  "pytest-clarity>=1.0.1",
  "pytest-benchmark>=4.0.0",
  "pytest-profiling>=1.7.0",
  "pytest-repeat>=0.9.3",
  "pytest-ordering>=0.6",
  "pytest-lazy-fixture>=0.6.3",
  "pytest-cases>=3.8.1",
  "pytest-check>=2.3.1",
  "pytest-subtests>=0.11.0",
  "pytest-testmon>=2.1.0",
  "pytest-testinfra>=10.1.0",
  "pytest-testinfra>=10.1.0",
  "pytest-testinfra>=10.1.0",
  "pytest-testinfra>=10.1.0",
  "pytest-testinfra>=10.1.0",
]

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",

  "License :: OSI Approved",
  "License :: OSI Approved :: Apache Software License",

  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://docs.codegen.com"
Issues = "https://github.com/codegen-sh/codegen/issues"
Source = "https://github.com/codegen-sh/codegen"

[project.scripts]
codegen = "codegen.cli.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/.gitignore",
  "/.pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codegen"]

[project.optional-dependencies.dev-dependencies]
dev-dependencies = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "pytest-sugar>=1.0.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.3.1",
  "pytest-rerunfailures>=14.0",
  "pytest-randomly>=3.15.0",
  "pytest-freezegun>=0.4.2",
  "pytest-httpserver>=1.0.10",
  "pytest-html>=4.1.1",
  "pytest-metadata>=3.1.1",
  "pytest-clarity>=1.0.1",
  "ruff-lsp<1.0.0,>=0.0.55",
  "austin-python>=1.7.1",
  "autoflake>=2.3.1",
  "typer>=0.16.0",
  "pre-commit-uv>=4.1.4",
  "austin-dist>=3.7.0",
  "uv>=0.4.25",
  "deptry>=0.22.0",
  "sybil[pytest]>=9.0.0",
  "jsbeautifier<2.0.0,>=1.15.1",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "calver-by-date" }

[tool.hatch.build.hooks.vcs]
version-file = "src/codegen/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["codegen"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["codegen", "tests"]
branch = true
parallel = true
omit = [
  "src/codegen/__about__.py",
]

[tool.coverage.paths]
codegen = ["src/codegen", "*/codegen/src/codegen"]
tests = ["tests", "*/codegen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
]

