[project]
name = "pr-review-bot"
version = "0.1.0"
description = "An AI-powered GitHub PR review bot that automatically reviews pull requests"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "langchain==0.3.22",
  "langchain-core==0.3.50",
  "langchain-anthropic==0.3.10",
  "langchain-openai==0.3.12",
  "langgraph==0.3.25",
  "langgraph-prebuilt==0.1.8",
  "langchain-xai==0.2.2",
  "langsmith==0.1.22",
  "fastapi>=0.115.8",
  "uvicorn>=0.27.0",
  "PyGithub>=2.1.1",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "markdown>=3.5",
  "beautifulsoup4>=4.12.2",
  "pyngrok>=7.0.0",
]
